@@ -111,10 +111,10 @@ hal_kinetis_flash_conf_p( void )
 
 //=== KINETIS FLASH security configuration END. ============================
 
-#if defined CYG_HAL_STARTUP_ROM && defined CYGPKG_HAL_KINETIS_CACHE
+#if defined CYGPKG_HAL_KINETIS_CACHE
 
+# ifndef CYG_HAL_STARTUP_RAM
 // Function for demotion of caching memory regions
-
 static void
 hal_cortexm_kinetis_conf_cache_regions(cyghwr_hal_kinetis_lmem_t* lmem_p,
                                       cyg_uint32 reg_n, const cyg_uint32 *reg_mode_p)
@@ -134,6 +134,7 @@ hal_cortexm_kinetis_conf_cache_regions(cyghwr_hal_kinetis_lmem_t* lmem_p,
     }
     lmem_p->rmr = regval;
 }
+# endif // ndef CYG_HAL_STARTUP_RAM
 
 const cyg_uint32 cache_reg_modes[] = {
     (CYGHWR_HAL_KINETIS_LMEM_DRAM_7000 << 16) |
@@ -149,7 +150,7 @@ const cyg_uint32 cache_reg_modes[] = {
     CYGHWR_HAL_KINETIS_LMEM_CRMR_REGION_NC_M
 };
 
-#endif // defined CYG_HAL_STARTUP_ROM && defined CYGPKG_HAL_KINETIS_CACHE
+#endif // defined CYGPKG_HAL_KINETIS_CACHE
 
 //==========================================================================
 // Setup variant specific hardware
@@ -158,18 +159,20 @@ const cyg_uint32 cache_reg_modes[] = {
 void hal_variant_init( void )
 {
     hal_update_clock_var();
-#if defined CYG_HAL_STARTUP_ROM && defined CYGPKG_HAL_KINETIS_CACHE
+#if defined CYGPKG_HAL_KINETIS_CACHE
+# ifndef CYG_HAL_STARTUP_RAM
     hal_cortexm_kinetis_conf_cache_regions(CYGHWR_HAL_KINETIS_LMEM_PS_P,
         sizeof(cache_reg_modes)/sizeof(cache_reg_modes[0]),
         cache_reg_modes);
     hal_cortexm_kinetis_conf_cache_regions(CYGHWR_HAL_KINETIS_LMEM_PC_P,
         sizeof(cache_reg_modes)/sizeof(cache_reg_modes[0]),
         cache_reg_modes);
+# endif
 # ifdef ENABLE_CACHE_ON_STARTUP
     HAL_DCACHE_ENABLE();
     HAL_ICACHE_ENABLE();
 # endif
-#endif // defined CYG_HAL_STARTUP_ROM && defined CYGPKG_HAL_KINETIS_CACHE
+#endif // defined CYGPKG_HAL_KINETIS_CACHE
 #ifdef CYGSEM_HAL_VIRTUAL_VECTOR_SUPPORT
     hal_if_init();
 #endif
